# phase-calculator

./: .gitignore  CMAKE_README.txt  CMakeLists.txt  PhaseCalculator_flow.xml  README.md  link_open_ephys_lib.cmake
ASICPhaseCalculator/: CMakeLists.txt
ASICPhaseCalculator-19Jan2023v2/: CMakeLists.txt  link_open_ephys_lib.cmake
ASICPhaseCalculator-19Jan2023v2/Source/: ASICPhaseCalculator.cpp  ASICPhaseCalculator.h  ASICPhaseCalculatorCanvas.cpp  ASICPhaseCalculatorCanvas.h  ASICPhaseCalculatorEditor.cpp  ASICPhaseCalculatorEditor.h  HTransformers.h  OpenEphysLib.cpp
ASICPhaseCalculator/Source/: ARModeler.h  ASICPhaseCalculator.cpp  ASICPhaseCalculator.h  ASICPhaseCalculatorCanvas.cpp  ASICPhaseCalculatorCanvas.h  ASICPhaseCalculatorEditor.cpp  ASICPhaseCalculatorEditor.h  HTransformers.cpp  HTransformers.h  OpenEphysLib.cpp  PhaseCalculator.cpp  PhaseCalculator.h  PhaseCalculatorCanvas.cpp  PhaseCalculatorEditor.cpp  PhaseCalculatorEditor.h
AnalyticSignal/: link_open_ephys_lib.cmake
AnalyticSignal/Source/: AnalyticSignal.cpp  AnalyticSignal.h  AnalyticSignalCanvas.cpp  AnalyticSignalCanvas.h  AnalyticSignalEditor.cpp  AnalyticSignalEditor.h  OpenEphysLib.cpp  SSPE.h  modelsamps.txt
Builds/VisualStudio2013/: PhaseCalculator.vcxproj  PhaseCalculator.vcxproj.filters
PhaseCalculator/: CMakeLists.txt
PhaseCalculator/Source/: FFTWWrapper.h  HTransformers.cpp  HTransformers.h  Makefile  OpenEphysLib.cpp  PhaseCalculator.cpp  PhaseCalculator.h  PhaseCalculatorCanvas.cpp
Resources/windows-libs/FFTW/include/: FFTWWrapper.h
Resources/windows-libs/FFTW/lib/x64/: libfftw3-3.lib
Resources/windows-libs/FFTW/lib/x86/: libfftw3-3.lib
Source/: ARModeler.h  FFTWWrapper.h  HTransformers.cpp  HTransformers.h  OpenEphysLib.cpp  PhaseCalculator.cpp  PhaseCalculator.h  PhaseCalculatorCanvas.cpp  PhaseCalculatorCanvas.h  PhaseCalculatorEditor.cpp  PhaseCalculatorEditor.h
Source/ar/: burg.cpp  burg.h
StatePhaseEst/: CMakeLists.txt
StatePhaseEst/Source/: ARModeler.h  HTransformers.cpp  HTransformers.h  OpenEphysLib.cpp  SSPE.h  StatePhaseEst.cpp  StatePhaseEst.h  StatePhaseEstCanvas.cpp  StatePhaseEstCanvas.h  StatePhaseEstEditor.cpp  StatePhaseEstEditor.h  bufdatsave.csv  buffersamps.txt
